# Agentic-advanced-research

./: README.md  basic_agent.py  pyproject.toml  pythonbasics.py
4-agents/: 01_chat_completion_api_metadata.py  02_chat_completion_with_tools_manual.py  03_langchain_agent_with_tools.py  04_conversational_chatbot.py  README.md
agents-context/: .gitignore  01_simple_context_window.py  02_realtime_chat_session.py  03_streamlit_context_app.py  README.md
deepagents/: README.md
deepagents/automation-standards/: api-tests.md  database-tests.md  web-tests.md
deepagents/concepts/: 01_task_planning_and_subagents.py  02_virtual_filesystem_permissions.py  README.md
deepagents/generated-tests/test-case-order-status-api-20260705-184824/: HITL_REVIEW.md  PR_DESCRIPTION.md  README.md  pom.xml
deepagents/generated-tests/test-case-order-status-api-20260705-184824/src/test/resources/test-data/: README.md
deepagents/test-script-generator/: test_script_generator.py
deepagents/test-script-generator/sample-testcases/: login-web-needs-clarification.md  login-with-credentials-blocked.md  order-status-api.md
langchain_agents/: agent_example1.py  example2.ipynb  example2.py
pydantic-1/: 00_plain_class_vs_pydantic.py  01_base_model.py  02_annotated_fields.py  03_field_validator.py  04_model_validator.py  05_computed_field.py  06_nested_models.py  07_dataclass.py  08_langchain_agent_with_pydantic.py  FormData.py  README.md
rag/: 01_pdf_loader_splitter_fixed.py  data_parsing_part1_langchain_data_loaders.ipynb  parsing.ipynb  rag_example1.ipynb
rag2/data/: data_parsing_part2_pymupdf_pdfplumber.ipynb  data_parsing_part3_docling.ipynb  data_parsing_part4_llama_parser.ipynb
