[project]
name = "agentic-practise"
version = "0.1.0"
description = "Basic one-file LangChain agent using Mesh API settings."
readme = "README.md"
authors = [
    { name = "chetangpande-ai", email = "chetangpande1@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]

[tool.uv.workspace]
members = [
    "pydantic",
]
