[project]
name = "agentic-practise"
version = "0.1.0"
description = "Basic one-file LangChain agent using Mesh API settings."
readme = "README.md"
authors = [
    { name = "chetangpande-ai", email = "chetangpande1@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.3.3",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pydantic>=2.13.4",
    "pypdf>=6.14.2",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.58.0",
]

[tool.uv.workspace]
members = [
    "pydantic",
]
